--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "blog.oakchris1955.eu",
-  "version": "1.0.0",
-  "description": "",
+  "name": "oakchris1955.eu",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "start": "npx @11ty/eleventy --serve",
     "build": "npx @11ty/eleventy"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Oakchris1955",
+  "license": "MIT or CC-BY-NC-ND-4.0",
   "dependencies": {
     "@11ty/eleventy": "^3.0.0",
     "@11ty/eleventy-plugin-rss": "^2.0.3",
