fix: patch @quasibit/eleventy-plugin-sitemap to not generate last modified field
The lastnod field was wildly inaccurate for some reason, and since everything is visible throught Git, I see no reason for it to currently exist

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "overrides": {
       "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
       "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2"
+    },
+    "patchedDependencies": {
+      "@quasibit/eleventy-plugin-sitemap": "patches/@quasibit__eleventy-plugin-sitemap.patch"
     }
   }
 }
